src/css/layout/_Maps.css
.section_empty {
    font-size: 60px;
    font-family: 'Lastik', sans-serif;
    font-weight: 400;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 2rem;
}

.section_title {
    margin-left: 1.5rem;
    position: relative;
    top: 7.5rem;
    margin-bottom: 7.5rem;
    font-size: 60px;
    font-family: 'Lastik', sans-serif;
    font-weight: 400;
}

.section_text {
    color: var(--athens);
}

.item-container {
    display: flex;
    flex-direction: column;
    margin-bottom: 10px;
}

.left_side {
    order: 1;
}

.right-side {
    order: 2;
}

.text-title {
    display: flex;
    justify-content: space-between;
    padding: 1rem 0rem 1rem 1rem;
}

.text-name {
    font-size: 23.5px;
    line-height: 33px;
    font-family: 'Lastik', sans-serif;
    font-weight: 400;
    width: 60%;
}

.right-side > * {
    border: 0.5px solid var(--athens);
    border-bottom: none;
    box-sizing: border-box;
    margin-left: 1.5rem;
    margin-right: 1.5rem;
}

.left_side {
    display: flex;
    justify-content: center;
}

.right-side {
    align-items: center;
}

.right-side > :not(:first-child) {
    padding: 1rem;
    border-bottom: 0.5px solid var(--athens);
}

.right-side > :last-child {
    padding-bottom: 3rem;
    border-top: none;
}

.flex {
    display: flex;
    justify-content: center;
}

.left_side > img,
.right-side > h1,
.right-side > span,
.right-side > h2 {
    max-width: 100%;
}

.item-container.even .left_side {
    order: 1;
}

.text-box {
    font-size: 12px;
}

.text-date,
.text-description {
    font-size: 12px;
    font-weight: 400;
}

.text-description {
    text-transform: uppercase;
    font-size: 14px;
}

.text-date {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-right: 1rem;
    line-height: 33px;
}

#colabBody {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 8rem;
    padding-bottom: 10rem;
}

.bodyAddons {
    display: none;
}

@media (min-width: 1200px) {
    .bodyAddons {
        display: inline;
        height: 126px;
    }

    #bodyIN {
        position: absolute;
        left: 5%;
    }

    #bodyHAB {
        position: absolute;
        right: 5%;
    }

    #colabBody {
        margin-top: 20rem;
    }

    .section_empty {
        font-size: 80px;
    }

    .section_title {
        margin-left: 8rem;
        top: 15rem;
        margin-bottom: 19rem;
        line-height: 100.06px;
        font-size: 120px;
    }

    .item-container {
        display: flex;
        flex-direction: row;
        align-items: center;
        margin-bottom: -2rem;
    }

    .left_side,
    .right-side {
        flex: 1;
        order: 0;
    }

    .text-title {
        display: flex;
        padding-left: 3rem;
        padding: 2rem 1rem 2rem 1rem;
    }

    .text-name {
        font-size: 40px;
        line-height: 56.8px;
        margin-left: 1rem;
    }

    .right-side > * {
        border: 0.8px solid var(--athens);
        margin-left: 8rem;
        margin-right: 8rem;
    }

    .right-side > :not(:first-child) {
        padding: 2rem;
        border-bottom: 0.8px solid var(--athens);
        border-top: none;
    }

    .right-side > :last-child {
        padding-bottom: 9rem;
    }

    .text-box {
        padding-bottom: 3rem;
        font-size: 16px;
    }

    .text-date,
    .text-description {
        font-size: 20px;
    }
}

